adjust cors for deployment & add admin approval page